# cfbot

./: .gitattributes  .gitignore  CONTRIBUTING.md  README.md  cfg.yml  main.py  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: dcmsg.yml
Cogs/: about.py  annou.py  annou_stat.py  auto_delete.py  auto_reply.py  dclogging.py  pterodactyl.py  ptersearch.py  reaction_rules.py  welcome.py
Cogs/about/: about.py
Cogs/annou/: annou.py  annou_stat.py
Cogs/reaction_roles/: README.md  reaction_roles.py
Cogs/serverstats/: serverstats.py
Cogs/tickets/: ticket.py
plugins/: discordcore.py  mcsm_client.py  pprint_formatter.py
